# SiliconBonk_Standalone

./: .gitignore  CMakeLists.txt  README.md  SiliconBonkConfig.h.in  colormanagement.cpp  fattoni.cpp  siliconbonk.cpp
cmake-modules/: DebSourcePPA.cmake  FindLCMS2.cmake
include/: blend_modes.h  colormanagement.h  colorspace.h  siliconbonk.h
